saturn-program-macros/tests/compile_fail/duplicate_instruction_key.stderr
error: duplicate `instruction` key; specify it only once
  --> tests/compile_fail/duplicate_instruction_key.rs:12:5
   |
12 |     instruction = "crate::instruction::Instr"
   |     ^^^^^^^^^^^
